--- a/geoserver/.pipeline/templates/geoserver.dc.yaml
+++ b/geoserver/.pipeline/templates/geoserver.dc.yaml
@@ -10,7 +10,7 @@ parameters:
   - name: NAME
     description: The name of the OpenShift Service exposed for geoserver .
     required: true
-    value: 'geoserver'
+    value: 'biohub-platform-geoserver'
   - name: SUFFIX
     required: true
     value: '-dev'
@@ -20,6 +20,7 @@ parameters:
   - name: IMAGE_STREAM_NAME
     description: The ImageStream name.
     required: true
+    value: 'biohub-platform-geoserver'
   - name: IMAGE_STREAM_VERSION
     description: Version of GeoServer image to be used (eg. 2.21.1 or latest).
     required: true
@@ -53,15 +54,16 @@ objects:
     apiVersion: v1
     metadata:
       name: ${NAME}${SUFFIX}
-    type: ClusterIP
-    ports:
-      - name: ${NAME}-${PORT_DEFAULT_NAME}
-        protocol: TCP
-        port: ${{PORT_DEFAULT}}
-        targetPort: ${{PORT_DEFAULT}}
-    sessionAffinity: None
-    selector:
-      deployment: ${NAME}${SUFFIX}
+    specs:
+      ports:
+        - name: ${NAME}-${PORT_DEFAULT_NAME}
+          protocol: TCP
+          port: ${{PORT_DEFAULT}}
+          targetPort: ${{PORT_DEFAULT}}
+      sessionAffinity: None
+      selector:
+        deployment: ${NAME}${SUFFIX}
+      type: ClusterIP
 
   # - kind: PersistentVolumeClaim
   #   apiVersion: v1
