--- a/geoserver/.pipeline/templates/geoserver.dc.yaml
+++ b/geoserver/.pipeline/templates/geoserver.dc.yaml
@@ -29,14 +29,14 @@ parameters:
   # - name: GEOSERVER_SECRETS_NAME
   #   description: The OpenShift secret that contains sensitive geoserver values.
   #   required: true
+  - name: VOLUME_CAPACITY
+    description: Volume space available for data, e.g. 512Mi, 2Gi.
+    required: true
   - name: PORT_DEFAULT
     value: '8080'
   - name: PORT_DEFAULT_NAME
     description: Default port name
     value: '8080-tcp'
-  - name: VOLUME_CAPACITY
-    description: Volume space available for data, e.g. 512Mi, 2Gi.
-    required: true
   - name: CPU_REQUEST
     value: '10m'
   - name: CPU_LIMIT
@@ -63,17 +63,17 @@ objects:
         deploymentConfig: ${NAME}${SUFFIX}
       type: ClusterIP
 
-  # - kind: PersistentVolumeClaim
-  #   apiVersion: v1
-  #   metadata:
-  #     name: '${NAME}${SUFFIX}'
-  #     role: geoserver
-  #   spec:
-  #     accessModes:
-  #       - ReadWriteMany
-  #     resources:
-  #       requests:
-  #         storage: '${VOLUME_CAPACITY}'
+  - kind: PersistentVolumeClaim
+    apiVersion: v1
+    metadata:
+      name: '${NAME}${SUFFIX}'
+      role: geoserver
+    spec:
+      accessModes:
+        - ReadWriteMany
+      resources:
+        requests:
+          storage: '${VOLUME_CAPACITY}'
 
   - kind: ImageStream
     apiVersion: v1
@@ -138,19 +138,15 @@ objects:
                   memory: '${MEMORY_LIMIT}'
               securityContext: {}
               terminationMessagePath: '/dev/termination-log'
-              # volumeMounts:
-              #   - mountPath: '/opt/geoserver_data/'
-              #     name: '${NAME}${SUFFIX}-data'
-              #   - mountPath: '/'
-              #     name: '${NAME}${SUFFIX}-run'
+              volumeMounts:
+                - mountPath: '/usr/share/geoserver/data_dir'
+                  name: '${NAME}${SUFFIX}-data'
           dnsPolicy: ClusterFirst
           restartPolicy: Always
-          # volumes:
-          #   - name: '${NAME}${SUFFIX}-data'
-          #     persistentVolumeClaim:
-          #       claimName: '${NAME}${SUFFIX}'
-          #   - name: '${NAME}${SUFFIX}-run'
-          #     emptyDir: {}
+          volumes:
+            - name: '${NAME}${SUFFIX}-data'
+              persistentVolumeClaim:
+                claimName: '${NAME}${SUFFIX}'
       triggers:
         - imageChangeParams:
             automatic: true
